--- a/premium/purchase/success/comfirm.html
+++ b/premium/purchase/success/comfirm.html
@@ -269,6 +269,7 @@ document.addEventListener('DOMContentLoaded', async () => {
   }catch(err){console.error(err); showOnly('errorSection');} finally{hideLoadingScreen();}
   setTimeout(hideLoadingScreen,5000);
 });
+    setTimeout(hideLoadingScreen, 5000);
 </script>
 </body>
 </html>
