--- a/premium/purchase/success/comfirm.html
+++ b/premium/purchase/success/comfirm.html
@@ -168,13 +168,15 @@ h1{ font-size:28px; margin:0; letter-spacing:.3px; text-align: center; }
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 <script>
+
 const firebaseConfig = {
-  apiKey: "YOUR_FIREBASE_KEY",
-  authDomain: "YOUR_PROJECT.firebaseapp.com",
-  projectId: "YOUR_PROJECT_ID",
-  storageBucket: "YOUR_PROJECT.appspot.com",
-  messagingSenderId: "YOUR_MESSAGING_ID",
-  appId: "YOUR_APP_ID"
+  apiKey: "AIzaSyBtVmI_0_9qC6Cj5lmYgbwVJlW8lH11Ouw",
+  authDomain: "nazapi-fc74e.firebaseapp.com",
+  projectId: "nazapi-fc74e",
+  storageBucket: "nazapi-fc74e.firebasestorage.app",
+  messagingSenderId: "1011679210688",
+  appId: "1:1011679210688:web:eeccc40063f83b91e3d125",
+  measurementId: "G-522271ZX8N"
 };
 firebase.initializeApp(firebaseConfig);
 const db = firebase.firestore();
