--- a/premium/purchase/success/comfirm.html
+++ b/premium/purchase/success/comfirm.html
@@ -224,7 +224,7 @@ document.addEventListener('DOMContentLoaded', async () => {
             key: licenseKey,
             name: "NazAPI License Key",
             source: "manual",
-            status: "active",
+            status: "unused",
             unusedExpiresAt: nowTS + 60*60*1000
           });
         showOnly('confirmationSection');
