--- a/premium/recherche.html
+++ b/premium/recherche.html
@@ -674,6 +674,11 @@ const db = firebase.firestore();
 const auth = firebase.auth();
 const functions = firebase.functions();
 const storage = firebase.storage();
+/** =========================
+ * LOADING SCREEN
+ * ========================= */
+function showLoadingScreen(message = 'Chargement...') { const loadingScreen = $('#loadingScreen'); const loadingText = loadingScreen.querySelector('.loading-text'); if (message) { loadingText.innerHTML = message + '<span class="loading-dots"></span>'; } loadingScreen.style.display = 'flex'; setTimeout(() => { loadingScreen.style.opacity = '1'; }, 10); }
+function hideLoadingScreen() { const loadingScreen = $('#loadingScreen'); loadingScreen.style.opacity = '0'; setTimeout(() => { loadingScreen.style.display = 'none'; }, 500); }
 
 /** =========================
  * GESTION DES RECHERCHES
