--- a/premium/recherche.html
+++ b/premium/recherche.html
@@ -6,465 +6,130 @@
 <title>NazAPI • Recherche Premium</title>
 <meta name="color-scheme" content="dark light" />
 <script src="https://js.stripe.com/v3/"></script>
-<style>
-/* Les styles CSS que vous avez fournis */
-:root {
-    --bg: #0b0f1a;
-    --card: rgba(255, 255, 255, 0.06);
-    --card-strong: rgba(255, 255, 255, 0.12);
-    --text: #e8ecf1;
-    --muted: #9fb2c8;
-    --accent: #6de1ff;
-    --ok: #3ad29f;
-    --warn: #ffd166;
-    --danger: #ff6b6b;
-    --ring: rgba(109, 225, 255, .35);
-    --shadow: 0 10px 30px rgba(0, 0, 0, .35), inset 0 0 0 1px rgba(255, 255, 255, .05);
-    --radius: 18px;
-}
-html, body {
-    height: 100%;
-}
-body {
-    margin: 0;
-    font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Inter, Arial;
-    color: var(--text);
-    background: radial-gradient(1200px 800px at 15% -10%, #16223a 0%, transparent 60%), radial-gradient(1000px 700px at 85% -5%, #1a2d4b 0%, transparent 60%), radial-gradient(1200px 900px at 50% 110%, #111a2a 0%, transparent 60%), var(--bg);
-    background-attachment: fixed;
-    overflow-y: auto;
-}
-/* étoiles */
-.stars, .stars2, .stars3 {
-    position: fixed;
-    inset: 0;
-    pointer-events: none;
-    background-repeat: repeat;
-    z-index: -1;
-    opacity: .6;
-    background-image: radial-gradient(1px 1px at 20px 30px, #fff, transparent 50%), radial-gradient(1px 1px at 80px 120px, #fff, transparent 50%), radial-gradient(1px 1px at 200px 80px, #fff, transparent 50%), radial-gradient(1px 1px at 320px 40px, #fff, transparent 50%), radial-gradient(1px 1px at 440px 160px, #fff, transparent 50%);
-    animation: twinkle 16s linear infinite;
-}
-.stars2 {
-    animation-duration: 22s;
-    opacity: .4;
-    transform: scale(1.2);
-}
-.stars3 {
-    animation-duration: 30s;
-    opacity: .25;
-    transform: scale(1.4);
-}
-@keyframes twinkle {
-    0% {
-        filter: brightness(.9);
-    }
-    50% {
-        filter: brightness(1.1);
-    }
-    100% {
-        filter: brightness(.9);
-    }
-}
-.wrap {
-    max-width: 1080px;
-    margin: auto;
-    padding: 32px 20px 80px;
-}
-header {
-    display: flex;
-    gap: 16px;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 24px;
-}
-.brand {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-}
-.logo {
-    width: 40px;
-    height: 40px;
-    border-radius: 12px;
-    background: radial-gradient(18px 14px at 14px 14px, #6de1ff 0%, #4cc2ff 35%, transparent 60%), conic-gradient(from 220deg, #6de1ff, #7c6dff, #eb6cff, #6de1ff);
-    box-shadow: 0 0 30px rgba(109, 225, 255, .4), inset 0 0 0 2px rgba(255, 255, 255, .07);
-}
-h1 {
-    font-size: 20px;
-    margin: 0;
-    letter-spacing: .3px;
-}
-.card {
-    background: var(--card);
-    border-radius: var(--radius);
-    box-shadow: var(--shadow);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    padding: 18px 18px;
-    border: 1px solid rgba(255, 255, 255, .06);
-}
-.stack {
-    display: grid;
-    gap: 16px;
-}
-.grid {
-    display: grid;
-    gap: 16px;
-    grid-template-columns: 1.1fr .9fr;
-}
-@media (max-width: 900px) {
-    .grid {
-        grid-template-columns: 1fr;
-    }
-}
-.muted {
-    color: var(--muted);
-}
-.btn {
-    appearance: none;
-    border: 0;
-    padding: 12px 16px;
-    border-radius: 14px;
-    font-weight: 600;
-    cursor: pointer;
-    background: linear-gradient(180deg, #1d2a42, #141c2b);
-    color: #eaf7ff;
-    box-shadow: var(--shadow);
-    transition: transform .05s ease, box-shadow .2s ease;
-}
-.btn:hover {
-    box-shadow: 0 14px 36px rgba(109, 225, 255, .25), inset 0 0 0 1px var(--ring);
-}
-.btn:active {
-    transform: translateY(1px);
-}
-.btn.secondary {
-    background: linear-gradient(180deg, #232b3b, #1a2230);
-}
-.btn.ok {
-    background: linear-gradient(180deg, #1f3a34, #122722);
-}
-.btn.danger {
-    background: linear-gradient(180deg, #3a2327, #2a1417);
-}
-.toolbar {
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    flex-wrap: wrap;
-}
-.pill {
-    padding: 6px 10px;
-    background: var(--card-strong);
-    border-radius: 999px;
-    font-size: 12px;
-}
-input[type="text"],
-input[type="search"],
-textarea {
-    width: 100%;
-    padding: 12px 14px;
-    border-radius: 12px;
-    border: 1px solid rgba(255, 255, 255, .07);
-    background: rgba(10, 14, 24, .6);
-    color: var(--text);
-    outline: none;
-    font-family: inherit;
-}
-textarea {
-    min-height: 100px;
-    resize: vertical;
-}
-.footer {
-    opacity: .85;
-    margin-top: 28px;
-    padding: 16px;
-    text-align: center;
-    font-size: 13px;
-    color: var(--muted);
-}
-.danger-text {
-    color: var(--danger);
-}
-.ok-text {
-    color: var(--ok);
-}
-.divider {
-    height: 1px;
-    background: rgba(255, 255, 255, .08);
-    margin: 12px 0;
-}
-.kbd {
-    background: rgba(255, 255, 255, .12);
-    padding: 2px 6px;
-    border-radius: 6px;
-    font-size: 12px;
-}
-.sticky-key {
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
-    max-width: 520px;
-    z-index: 50;
-}
-.hide {
-    display: none !important;
-}
-.role-chip {
-    font-size: 12px;
-    padding: 6px 10px;
-    border-radius: 999px;
-    background: rgba(255, 25, 255, .1);
-}
-.code {
-    font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
-}
-/* Contact card */
-.contact-card {
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.08), rgba(255, 255, 255, 0.04));
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    padding: 16px;
-    border-radius: var(--radius);
-    text-align: center;
-}
-.discord-btn {
-    display: inline-flex;
-    align-items: center;
-    gap: 8px;
-    background: #5865F2;
-    color: white;
-    padding: 10px 16px;
-    border-radius: 12px;
-    text-decoration: none;
-    font-weight: 600;
-    margin-top: 12px;
-    transition: all 0.2s ease;
-}
-.discord-btn:hover {
-    background: #4752c4;
-    transform: translateY(-2px);
-    box-shadow: 0 4px 12px rgba(88, 101, 242, 0.3);
-}
-/* Loading */
-.loading-screen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: var(--bg);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-    transition: opacity 0.5s ease;
-}
-.loading-spinner {
-    width: 50px;
-    height: 50px;
-    border: 3px solid rgba(109, 225, 255, 0.3);
-    border-radius: 50%;
-    border-top-color: var(--accent);
-    animation: spin 1s ease-in-out infinite;
-    margin-bottom: 20px;
-}
-@keyframes spin {
-    to {
-        transform: rotate(360deg);
-    }
-}
-.loading-text {
-    font-size: 18px;
-    color: var(--text);
-    text-align: center;
-}
-.loading-dots:after {
-    content: '';
-    animation: dots 1.5s infinite;
-}
-@keyframes dots {
-    0%, 20% {
-        content: '.';
-    }
-    40% {
-        content: '..';
-    }
-    60%, 100% {
-        content: '...';
-    }
-}
-/* Role status */
-.role-status {
-    padding: 10px;
-    border-radius: 12px;
-    margin-top: 12px;
-    font-size: 14px;
-    text-align: center;
-}
-.role-status.updating {
-    background: rgba(255, 209, 102, 0.1);
-    color: var(--warn);
-}
-.role-status.success {
-    background: rgba(58, 210, 159, 0.1);
-    color: var(--ok);
-}
-.role-status.error {
-    background: rgba(255, 107, 107, 0.1);
-    color: var(--danger);
-}
-/* Vouches */
-.vouch-section {
-    margin-top: 30px;
-}
-.vouch-form {
-    background: var(--card);
-    padding: 20px;
-    border-radius: var(--radius);
-    margin-bottom: 20px;
-}
-.vouch-list {
-    display: grid;
-    gap: 16px;
-}
-.vouch-item {
-    background: var(--card);
-    padding: 16px;
-    border-radius: var(--radius);
-    position: relative;
-}
-.vouch-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-}
-.vouch-user {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-.vouch-avatar {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    background: linear-gradient(45deg, #6de1ff, #7c6dff);
-}
-.vouch-name {
-    font-weight: 600;
-}
-.vouch-date {
-    font-size: 12px;
-    color: var(--muted);
-}
-.vouch-content {
-    margin: 10px 0;
-    line-height: 1.5;
-}
-.vouch-delete {
-    position: absolute;
-    top: 16px;
-    right: 16px;
-    background: rgba(255, 107, 107, 0.2);
-    border: none;
-    border-radius: 6px;
-    padding: 4px 8px;
-    color: var(--danger);
-    cursor: pointer;
-    font-size: 12px;
-}
-.vouch-delete:hover {
-    background: rgba(255, 107, 107, 0.3);
-}
-.no-vouches {
-    text-align: center;
-    padding: 30px;
-    color: var(--muted);
-}
-.char-count {
-    text-align: right;
-    font-size: 12px;
-    color: var(--muted);
-    margin-top: 5px;
-}
-.char-count.warning {
-    color: var(--warn);
-}
-.char-count.error {
-    color: var(--danger);
-}
-/* Stripe popup (matching design) */
-.popup-payment {
-    position: fixed;
-    inset: 0;
-    background: rgba(0, 0, 0, .6);
-    display: none;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-}
-.popup-content {
-    background: var(--card);
-    border: 1px solid rgba(255, 255, 255, .06);
-    box-shadow: var(--shadow);
-    border-radius: var(--radius);
-    width: 100%;
-    max-width: 460px;
-    padding: 18px;
-}
-#payment-element {
-    padding: 8px;
-    background: rgba(10, 14, 24, .6);
-    border: 1px solid rgba(255, 255, 255, .07);
-    border-radius: 12px;
-}
-#paymentMessage {
-    font-size: 13px;
-    color: var(--muted);
-    min-height: 18px;
-}
-/* Result box */
-.result-box {
-    background: rgba(255, 255, 255, 0.05);
-    border: 1px solid rgba(255, 255, 255, 0.08);
-    border-radius: 12px;
-    padding: 16px;
-    margin-top: 16px;
-    position: relative;
-}
-.result-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 12px;
-}
-.result-copy-btn {
-    background: rgba(109, 225, 255, 0.15);
-    border: none;
-    border-radius: 8px;
-    padding: 6px 12px;
-    color: var(--accent);
-    cursor: pointer;
-    font-size: 12px;
-    font-weight: 600;
-    transition: all 0.2s ease;
-}
-.result-copy-btn:hover {
-    background: rgba(109, 225, 255, 0.25);
-}
-.result-content {
-    font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
-    white-space: pre-wrap;
-    word-break: break-all;
-    font-size: 13px;
-    line-height: 1.5;
-}
-.no-results {
-    text-align: center;
-    padding: 30px;
-    color: var(--muted);
-}
+  <style>
+ :root{
+    --bg: #0b0f1a;
+    --card: rgba(255,255,255,0.06);
+    --card-strong: rgba(255,255,255,0.12);
+    --text: #e8ecf1;
+    --muted: #9fb2c8;
+    --accent: #6de1ff;
+    --ok: #3ad29f;
+    --warn: #ffd166;
+    --danger:#ff6b6b;
+    --ring: rgba(109,225,255,.35);
+    --shadow: 0 10px 30px rgba(0,0,0,.35), inset 0 0 0 1px rgba(255,255,255,.05);
+    --radius: 18px;
+  }
+  html,body{height:100%}
+  body{
+    margin:0; font-family: ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Inter,Arial;
+    color:var(--text); background: radial-gradient(1200px 800px at 15% -10%,#16223a 0%,transparent 60%),
+                       radial-gradient(1000px 700px at 85% -5%,#1a2d4b 0%,transparent 60%),
+                       radial-gradient(1200px 900px at 50% 110%,#111a2a 0%,transparent 60%), var(--bg);
+    background-attachment: fixed;
+    overflow-y: auto;
+  }
+  /* étoiles */
+  .stars, .stars2, .stars3{
+    position:fixed; inset:0; pointer-events:none; background-repeat:repeat; z-index:-1; opacity:.6;
+    background-image: radial-gradient(1px 1px at 20px 30px,#fff,transparent 50%),
+                      radial-gradient(1px 1px at 80px 120px,#fff,transparent 50%),
+                      radial-gradient(1px 1px at 200px 80px,#fff,transparent 50%),
+                      radial-gradient(1px 1px at 320px 40px,#fff,transparent 50%),
+                      radial-gradient(1px 1px at 440px 160px,#fff,transparent 50%);
+    animation: twinkle 16s linear infinite;
+  }
+  .stars2{ animation-duration:22s; opacity:.4; transform:scale(1.2) }
+  .stars3{ animation-duration:30s; opacity:.25; transform:scale(1.4) }
+  @keyframes twinkle { 0%{filter:brightness(.9)} 50%{filter:brightness(1.1)} 100%{filter:brightness(.9)} }
+
+  .wrap{ max-width:1080px; margin:auto; padding:32px 20px 80px; }
+  header{
+    display:flex; gap:16px; align-items:center; justify-content:space-between; margin-bottom:24px;
+  }
+  .brand{ display:flex; align-items:center; gap:12px; }
+  .logo{
+    width:40px; height:40px; border-radius:12px; background:
+      radial-gradient(18px 14px at 14px 14px, #6de1ff 0%, #4cc2ff 35%, transparent 60%),
+      conic-gradient(from 220deg,#6de1ff, #7c6dff, #eb6cff, #6de1ff);
+    box-shadow: 0 0 30px rgba(109,225,255,.4), inset 0 0 0 2px rgba(255,255,255,.07);
+  }
+  h1{ font-size:20px; margin:0; letter-spacing:.3px }
+  .card{
+    background: var(--card); border-radius: var(--radius); box-shadow: var(--shadow);
+    backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px);
+    padding:18px 18px; border:1px solid rgba(255,255,255,.06);
+  }
+  .stack{ display:grid; gap:16px; }
+  .grid{ display:grid; gap:16px; grid-template-columns: 1.1fr .9fr; }
+  @media (max-width:900px){ .grid{ grid-template-columns:1fr } }
+  .muted{ color:var(--muted) }
+  .btn{
+    appearance:none; border:0; padding:12px 16px; border-radius:14px; font-weight:600; cursor:pointer;
+    background: linear-gradient(180deg, #1d2a42, #141c2b); color:#eaf7ff;
+    box-shadow: var(--shadow); transition: transform .05s ease, box-shadow .2s ease;
+  }
+  .btn:hover{ box-shadow: 0 14px 36px rgba(109,225,255,.25), inset 0 0 0 1px var(--ring) }
+  .btn:active{ transform: translateY(1px) }
+  .btn.secondary{ background: linear-gradient(180deg, #232b3b, #1a2230) }
+  .btn.ok{ background: linear-gradient(180deg, #1f3a34, #122722) }
+  .btn.danger{ background: linear-gradient(180deg, #3a2327, #2a1417) }
+  .toolbar{ display:flex; gap:10px; align-items:center; flex-wrap:wrap }
+  .pill{ padding:6px 10px; background: var(--card-strong); border-radius:999px; font-size:12px; }
+  input[type="text"], input[type="search"], textarea {
+    width:100%; padding:12px 14px; border-radius:12px; border:1px solid rgba(255,255,255,.07);
+    background: rgba(10,14,24,.6); color:var(--text); outline:none;
+    font-family: inherit;
+  }
+  textarea { min-height: 100px; resize: vertical; }
+  .footer{ opacity:.85; margin-top:28px; padding:16px; text-align:center; font-size:13px; color:var(--muted) }
+  .danger-text{ color:var(--danger) }
+  .ok-text{ color:var(--ok) }
+  .divider{ height:1px; background: rgba(255,255,255,.08); margin:12px 0 }
+  .kbd{ background:rgba(255,255,255,.12); padding:2px 6px; border-radius:6px; font-size:12px }
+  .sticky-key{ position:fixed; right:20px; bottom:20px; max-width:520px; z-index:50 }
+  .hide{ display:none !important }
+  .role-chip{ font-size:12px; padding:6px 10px; border-radius:999px; background:rgba(255,25,255,.1); }
+  .code{ font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; }
+  /* Contact card */
+  .contact-card { background: linear-gradient(135deg, rgba(255,255,255,0.08), rgba(255,255,255,0.04)); border: 1px solid rgba(255,255,255,0.1); padding: 16px; border-radius: var(--radius); text-align: center; }
+  .discord-btn { display: inline-flex; align-items: center; gap: 8px; background: #5865F2; color: white; padding: 10px 16px; border-radius: 12px; text-decoration: none; font-weight: 600; margin-top: 12px; transition: all 0.2s ease; }
+  .discord-btn:hover { background: #4752c4; transform: translateY(-2px); box-shadow: 0 4px 12px rgba(88, 101, 242, 0.3); }
+  /* Loading */
+  .loading-screen { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: var(--bg); display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 9999; transition: opacity 0.5s ease; }
+  .loading-spinner { width: 50px; height: 50px; border: 3px solid rgba(109, 225, 255, 0.3); border-radius: 50%; border-top-color: var(--accent); animation: spin 1s ease-in-out infinite; margin-bottom: 20px; }
+  @keyframes spin { to { transform: rotate(360deg); } }
+  .loading-text { font-size: 18px; color: var(--text); text-align: center; }
+  .loading-dots:after { content: ''; animation: dots 1.5s infinite; }
+  @keyframes dots { 0%, 20% { content: '.'; } 40% { content: '..'; } 60%, 100% { content: '...'; } }
+  /* Role status */
+  .role-status { padding: 10px; border-radius: 12px; margin-top: 12px; font-size: 14px; text-align: center; }
+  .role-status.updating { background: rgba(255, 209, 102, 0.1); color: var(--warn); }
+  .role-status.success { background: rgba(58, 210, 159, 0.1); color: var(--ok); }
+  .role-status.error { background: rgba(255, 107, 107, 0.1); color: var(--danger); }
+  /* Vouches */
+  .vouch-section { margin-top: 30px; }
+  .vouch-form { background: var(--card); padding: 20px; border-radius: var(--radius); margin-bottom: 20px; }
+  .vouch-list { display: grid; gap: 16px; }
+  .vouch-item { background: var(--card); padding: 16px; border-radius: var(--radius); position: relative; }
+  .vouch-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px; }
+  .vouch-user { display: flex; align-items: center; gap: 10px; }
+  .vouch-avatar { width: 32px; height: 32px; border-radius: 50%; background: linear-gradient(45deg, #6de1ff, #7c6dff); }
+  .vouch-name { font-weight: 600; }
+  .vouch-date { font-size: 12px; color: var(--muted); }
+  .vouch-content { margin: 10px 0; line-height: 1.5; }
+  .vouch-delete { position: absolute; top: 16px; right: 16px; background: rgba(255, 107, 107, 0.2); border: none; border-radius: 6px; padding: 4px 8px; color: var(--danger); cursor: pointer; font-size: 12px; }
+  .vouch-delete:hover { background: rgba(255, 107, 107, 0.3); }
+  .no-vouches { text-align: center; padding: 30px; color: var(--muted); }
+  .char-count { text-align: right; font-size: 12px; color: var(--muted); margin-top: 5px; }
+  .char-count.warning { color: var(--warn); }
+  .char-count.error { color: var(--danger); }
+  /* Stripe popup (matching design) */
+  .popup-payment { position: fixed; inset: 0; background: rgba(0,0,0,.6); display: none; justify-content: center; align-items: center; z-index: 9999; }
+  .popup-content { background: var(--card); border:1px solid rgba(255,255,255,.06); box-shadow: var(--shadow); border-radius: var(--radius); width: 100%; max-width: 460px; padding: 18px; }
+  #payment-element { padding: 8px; background: rgba(10,14,24,.6); border:1px solid rgba(255,255,255,.07); border-radius: 12px; }
+  #paymentMessage { font-size: 13px; color: var(--muted); min-height: 18px; }
 </style>
 </head>
 <body>
